overlays/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoa-svc
spec:
  selector:
    app: hoa
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
